# django_event_manager

./: README.md  create-db-conainer.sh  pyproject.toml  test.py
src/: conftest.py  db.sqlite3  manage.py  nohup.out  pytest.ini
src/apps/api_auth/api/: serializers.py  urls.py  views.py
src/apps/base/api/: mixins.py
src/apps/events/: admin.py  apps.py  const.py  models.py  tests.py  views.py
src/apps/events/api/: serializers.py  urls.py  views.py
src/apps/events/migrations/: 0001_initial.py  0002_initial.py  0002_remove_eventdate_events_eventdate_start_must_be_gte_today_and_more.py  0003_alter_eventdate_end_alter_eventdate_start.py  0003_remove_eventdate_events_eventdate_end_must_be_gte_start_and_more.py  0004_alter_eventdate_event.py
src/apps/users/: models.py  views.py
src/apps/users/api/: serializers.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py
src/events_project/: asgi.py  settings.py  urls.py  wsgi.py
